Set up user form foundation with auth

--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <script type="text/javascript">
-    ___INITIAL_STATE__ = {user:5}
+    ___INITIAL_STATE__ = {user:{}}
   </script>
+  <noscript>
+    <style type="text/css">
+        .pagecontainer {display:none;}
+    </style>
+    <div class="noscriptmsg">
+    Wir können Ihre gewünschte Seite leider nicht darstellen, da Sie Javascript deaktiviert haben.
+    </div>
+</noscript>
 </head>
 <body>
   <div id="root" style="height: 100%"></div>
