Add datalayer object

--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,30 @@
   <title>WV Experience Plus</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  
   <script type="text/javascript">
-    ___INITIAL_STATE__ = {user:{}}
+    ___INITIAL_STATE__ = {profile:{}}
+  </script>
+  <script>
+    dataLayer = [{
+      'page_name': 'Kinderpatenschaft',
+      'page_type': 'child sponsorship landing page',
+      'event': 'pageViewEvent',
+      'ecommerce': {
+        'detail': {
+          'products': [
+          {
+            'name': 'Child Sponsorship',
+            'id': 'SIE-1211-101010',
+            'name': 'Sikhonzo',
+            'country': 'Swasiland',
+            'project': 'Sikhonzo',
+            'category': 'SIE',
+            'price': 30
+          },
+        ]
+        } 
+      }
+    }];
   </script>
   <noscript>
     <style type="text/css">
